--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": ">= 0.12.0"
   },
   "scripts": {
+    "seed": "node src/seeds.js",
     "test": "npm run jshint && npm run mocha",
     "jshint": "jshint src/. test/. --config",
     "start": "node src/",
@@ -27,6 +28,7 @@
     "cors": "^2.8.1",
     "feathers": "^2.0.3",
     "feathers-authentication": "^0.7.12",
+    "feathers-client": "^1.9.0",
     "feathers-configuration": "^0.3.3",
     "feathers-errors": "^2.5.0",
     "feathers-hooks": "^1.7.1",
@@ -36,6 +38,7 @@
     "mongoose": "^4.8.4",
     "passport": "^0.3.2",
     "serve-favicon": "^2.4.0",
+    "superagent": "^3.5.0",
     "winston": "^2.3.1"
   },
   "devDependencies": {
