--- a/package.json
+++ b/package.json
@@ -33,12 +33,13 @@
     "feathers-errors": "^2.5.0",
     "feathers-hooks": "^1.7.1",
     "feathers-mongoose": "^3.6.2",
-    "feathers-rest": "^1.6.0",
     "feathers-socketio": "^1.4.2",
     "mongoose": "^4.8.4",
     "passport": "^0.3.2",
+    "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.8",
     "serve-favicon": "^2.4.0",
-    "superagent": "^3.5.0",
+    "socket.io-client": "^1.7.3",
     "winston": "^2.3.1"
   },
   "devDependencies": {
